// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LogsContent /> tests snapshot test 1`] = `
<div>
  <section
    class="logContent"
  >
    <div
      class="StyledProps--font StyledProps--main headerContainer"
    >
      <header
        class="logsHeader"
      >
        <section
          class="headerContent"
        >
          <p
            class="StyledProps--font StyledProps--main header"
          >
            Logs
          </p>
          <p
            class="StyledProps--font StyledProps--main subHeader StyledProps--font-small"
          >
            
          </p>
        </section>
        <div />
      </header>
      <section
        class="headerActions"
      >
        <div
          class="searchInput"
        />
      </section>
    </div>
    <div />
    <div
      class="summaryElement"
    >
      Summary
    </div>
  </section>
</div>
`;

exports[`<LogsContent /> tests snapshot test 2`] = `
<div>
  <section
    class="logContent"
  >
    <div
      class="StyledProps--font StyledProps--main headerContainer"
    >
      <header
        class="logsHeader"
      >
        <section
          class="headerContent"
        >
          <p
            class="StyledProps--font StyledProps--main header"
          >
            Logs
          </p>
          <p
            class="StyledProps--font StyledProps--main subHeader StyledProps--font-small"
          >
            
          </p>
        </section>
        <div />
      </header>
      <section
        class="headerActions"
      >
        <div
          class="searchInput"
        />
      </section>
    </div>
    <div />
    <div
      class="summaryElement"
    >
      Summary
    </div>
  </section>
</div>
`;

exports[`<LogsContent /> tests snapshot test 3`] = `
<div>
  <section
    class="logContent"
  >
    <div
      class="StyledProps--font StyledProps--main headerContainer"
    >
      <header
        class="logsHeader"
      >
        <section
          class="headerContent"
        >
          <p
            class="StyledProps--font StyledProps--main header"
          >
            Logs
          </p>
          <p
            class="StyledProps--font StyledProps--main subHeader StyledProps--font-small"
          >
            
          </p>
        </section>
        <div />
      </header>
      <section
        class="headerActions"
      >
        <div
          class="searchInput"
        />
      </section>
    </div>
    <div />
    <div
      class="summaryElement"
    >
      Summary
    </div>
  </section>
</div>
`;

exports[`<LogsContent /> tests snapshot test 4`] = `
<div>
  <section
    class="logContent"
  >
    <div
      class="StyledProps--font StyledProps--main headerContainer"
    >
      <header
        class="logsHeader"
      >
        <section
          class="headerContent"
        >
          <p
            class="StyledProps--font StyledProps--main header"
          >
            Logs
          </p>
          <p
            class="StyledProps--font StyledProps--main subHeader StyledProps--font-small"
          >
            
          </p>
        </section>
        <div />
      </header>
      <section
        class="headerActions"
      >
        <div
          class="searchInput"
        />
      </section>
    </div>
    <div />
    <div
      class="summaryElement"
    >
      Summary
    </div>
  </section>
</div>
`;

exports[`<LogsContent /> tests toggleSection, rightElementForSection callback props works properly 1`] = `
<div>
  <section
    class="logContent"
  >
    <div
      class="StyledProps--font StyledProps--main headerContainer"
    >
      <header
        class="logsHeader"
      >
        <section
          class="headerContent"
        >
          <p
            class="StyledProps--font StyledProps--main header"
          >
            Logs
          </p>
          <p
            class="StyledProps--font StyledProps--main subHeader StyledProps--font-small"
          >
            
          </p>
        </section>
        <div />
      </header>
      <section
        class="headerActions"
      >
        <div
          class="searchInput"
        />
      </section>
    </div>
    <div>
      toggleSection
    </div>
    <div>
      rightElementForSection
    </div>
    <div
      class="summaryElement"
    >
      Summary
    </div>
  </section>
</div>
`;

exports[`<LogsContent /> tests toggleSection, rightElementForSection callback props works properly 2`] = `
<div>
  <section
    class="logContent"
  >
    <div
      class="StyledProps--font StyledProps--main headerContainer"
    >
      <header
        class="logsHeader"
      >
        <section
          class="headerContent"
        >
          <p
            class="StyledProps--font StyledProps--main header"
          >
            Logs
          </p>
          <p
            class="StyledProps--font StyledProps--main subHeader StyledProps--font-small"
          >
            
          </p>
        </section>
        <div />
      </header>
      <section
        class="headerActions"
      >
        <div
          class="searchInput"
        />
      </section>
    </div>
    <div>
      toggleSection
    </div>
    <div>
      rightElementForSection
    </div>
    <div
      class="summaryElement"
    >
      Summary
    </div>
  </section>
</div>
`;
